--- a/specs/fcm.tex
+++ b/specs/fcm.tex
@@ -529,4 +529,68 @@ Felix provides
 to facilitate debugging and error management in conjunction with
 conditional compilation.
 
+\subsection{Tokenisation}
+The Felix tokeniser tokenises a whole file before parsing. Whilst the parser
+can play some tricks distinguising identifiers and keywords, it cannot recognize
+other kinds of new symbols. Therefore, rudimentary facilities are provided in the
+preprocessor to generate a restricted class of user defined tokens.
+The
+\begin{verbatim}
+#infix 99 "$*" funds
+#infix "$*" funds
+#infix 99 fred funds
+#infix fred funds
+\end{verbatim}
+introduce either a symbol name, consisting of a sequence of special
+characters, or a keyword name, and make them infix operator mapping to
+a function taking a pair of arguments. Thus the syntax
+\begin{verbatim}
+1 $* 2
+\end{verbatim}
+is mapped to
+\begin{verbatim}
+funds (1,2)
+\end{verbatim}
+The precedence is currently ignored: all symbols have a fixed low precedence.
+The syntax
+\begin{verbatim}
+#symbol "$*"
+#symbol fred
+\end{verbatim}
+also introduces a new token.
+All these symbols are encoded as a \verb%USER10% token with attributes
+precedence 10, symbol as specified, and function as specified, or, the token
+spelling if elided. Currently \verb%infix% and \verb%symbol% are synonyms
+and can be used interchangeably.
+
+Although these symbols are encoded in a fixed token, the parser is able to test
+attributes and abort parses when token attributes fail some condition. Therefore,
+the parser is capable of distinguishing tokens based on their attributes
+provided the grammar is programmed to do so.
+
+Felix also provides
+\begin{verbatim}
+#bracket "left" "right" funbr
+\end{verbatim}
+which defines two new tokens which act as balanced pairs or brackets
+and apply the specified function to their contents, so that
+\begin{verbatim}
+left x right
+\end{verbatim}
+maps to
+\begin{verbatim}
+funbr x
+\end{verbatim}
+These are encoded in the \verb%USERLB% and \verb%USERRB% tokens respectively
+with the bracket spelling as an attribute, and the function encoded in the
+left bracket token.
+
+Finally, the 
+\begin{verbatim}
+#keyword id1 id2 id3
+\end{verbatim}
+directive introduces new keywords without mapping them to anything.
+These are encoded in the \verb%USER_KEYWORD% token, with the keyword
+as the attribute.
+
 \end{document}
