Some update to make merge work.

--- a/specs/contract_programming.tex
+++ b/specs/contract_programming.tex
@@ -138,7 +138,7 @@ avoid fruitless match attempts.
 Note: there is currently no way to make assertions about procedures, the system
 only works for expressions.
 
-\section{ad hoc assertion}
+\section{Ad hoc assertion}
 Felix provides the usual run time checking with 
 \begin{verbatim}
 assert condition;
