--- a/specs/compilation_model.tex
+++ b/specs/compilation_model.tex
@@ -33,7 +33,8 @@ Python is not required, but can be used to run platform independent
 command line and GUI interface scripts and is therefore considered
 desirable. Version 2.4 or above is recommended. The scripts will
 not run with Python 3 due to unfortunate incompatibilities with
-the print statement.
+the print statement. (However Python 3 is required to actually
+build the system).
 
 \section{Platform model}
 Compilation terminology specifies
@@ -596,7 +597,8 @@ They can also be polymorphic!
 
 \subsection{requires clause}
 A requires clause can be added to any floating insertion or
-definition of a primitive type, to specify inclusion of any
+definition of a primitive type, function, or procedure
+to specify inclusion of any
 resources required to support the definition. A requires clause
 can also be given as a directive, in which case it is unconditional
 if at global scope, or applies to the containing module or typeclass
