--- a/README
+++ b/README
@@ -1,4 +1,13 @@
 Felix is an advanced high performance statically typed scripting language.
+It is as easy to run a program as Python:
+
+flx filename
+
+"just works". But underneath it generates highly optimised machine
+binaries which outperform all interpreters, bytecode compilers,
+virtual machines, and most compiled languages including C.
+Felix is an aggressive inliner which performs whole program
+analysis.
 
 Features:
 
@@ -9,13 +18,20 @@ Features:
 * lightweight threads with channels
 * asynchronous network I/O
 * thread safe garbage collection
+* strictly statically typed
 * overloading
-* parametric polymorphism
+* first order parametric polymorphism
 * polymorphism with constraints
 * multitype Haskell style type classes
 * type classes with real semantic specification
 * semantics can be checked by theorem provers
-* bindings to Gnu GMP and GSL included
+* strong functional subsystem
+* pattern matching
+* first class function, sum, and product types
+* Tre based regexp processing built in
+* bindings to Gnu GMP and Gnu GSL included
 * user definabled and inline extensible grammar
-
+* builds on all platforms
+* runs on all platforms
+* open source FFAU (free for any use) licence
 
