--- a/src/compiler/dypgen/CHANGES
+++ b/src/compiler/dypgen/CHANGES
@@ -1,3 +1,20 @@
+2012/04/19
+
+Fixed a bug that made the parser return wrong positions for the matched
+symbols.
+
+__________________________________________________________________________
+2012/03/14
+
+Added the function:
+val is_re_name : ('t,'o,'gd,'ld,'l) parser_pilot -> string -> bool
+Now you can ask the parser_pilot whether s is the name of a declared regexp:
+>
+> if is_re_name dyp.parser_pilot s
+> then Regexp (RE_Name s)
+> else failwith "regexp name undefined"
+
+__________________________________________________________________________
 2011/11/27
 
 Fixed a bug that prevented merge to happen when reducing with a rule with
