INSTALL - Added BSD specific install instructions src/web/download.html - Referenced BSD specific installation instructions in INSTALL Makefile - Install targets omit sudo when running as root src/config/unix/impl_specific.fpc - Unix varial specific dependencies for flx (Empty by default) src/config/unix/bsd_impl_specific.fpc.in - BSD specific dependencies for flx buildsystem/flx.py - flx_pkgconfig does dnot by default follow Requires: added optional argument to method flx_pckconfig_flags to _run_flx_pkgconfig                      and downstream methods _build_link and ultimately supplying flx_pkgconfig arg --rec in method build_flx fbuild/lib/fbuild/config/c/posix.py - appending pthread to external_libs in class pthread_h fbuildroot.py - Upon detection of bsd platform copt src/config/unix/bsd_impl_specific.fpc.in build/release/config/impl_specific.fpc src/config/unix/flx.fpc - added Requires: impl_specific

--- a/INSTALL
+++ b/INSTALL
@@ -7,6 +7,12 @@ Requirements
 * Python >= 3.1
 * C++ compiler (clang, gcc, msvc++)
 
+Optional
+--------
+SDL
+ZMQ
+libxml2
+
 Build
 -----
 
@@ -28,6 +34,49 @@ Install
 make install
 
 You will need to put a sudo password.
+
+Installing Felix: POSIX (BSD)
+===============================================
+
+Requirements Base
+-----------------
+* C++ compiler (clang, gcc)
+
+Requirements Ports
+------------------
+* lang/ocaml  >= 3.11
+* lang/python32 || lang/python31 (Python >= 3.1)
+* databases/sqlite3 
+* ports-mgmt/portconf
+* databases/py-sqlite3
+  ** special instructions **
+  The py-sqlite3 port by default targets Python2 inorder to build for 
+  python3 ports-mgmt/portconf must be installed and the file: 
+   /usr/local/etc/ports.conf must exist and contain:
+     databases/py-sqlite3: PYTHON_VERSION=python3.2
+
+Optional Ports
+--------------
+devel/sdl
+devel/zmq
+textproc/libxml2
+databases/postgresql83-client or greater
+
+Build
+-----
+gmake build
+
+Test
+----
+gmake test
+
+Docs
+----
+gmake doc
+
+Install
+-------
+gmake install
 
 WINDOWS: MSVC++
 ================
