--- a/demos/x11/README
+++ b/demos/x11/README
@@ -33,10 +33,11 @@ Running
   tinyflxwm
   ---------
   To run the window manager examples first start a nested display with
-    Xnest :10:0
+    Xnest :10
   Then pass the DISPLAY of the X server to tinyflxwm
     DISPLAY=:10.0 flx tinyflxwm
-
+  And of course you need a window to manage, so lets try xclock
+    DISPLAY=:10.0 xclock
   Usage:
     Grab with Shift-Alt-MouseButton-1
     Move with Shift-Alt-MouseButton-2
